--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "braft-editor": "^2.2.5",
+    "braft-extensions": "0.0.16",
+    "draft-js-prism": "^1.0.6",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
