--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-flip-toolkit": "^6.5.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "styled-icons": "^6.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
