--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yuandong-chen.github.io/DemoForPersonalWebSite",
   "dependencies": {
     "braft-editor": "^2.2.5",
     "braft-extensions": "0.0.16",
     "draft-js-prism": "^1.0.6",
+    "gh-pages": "^2.0.1",
+    "gitment": "0.0.3",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -21,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
